# first-steps-with-memgraph

./: .gitignore  load_to_mem.py  pyproject.toml
searches/: betweeness_search.py  betweenness_search.py  community_detection_search.py  community_search.py  entity_search.py  hybrid_search.py  keyword_search.py  node2vec_search.py  page_rank.py  semantic_search.py
